2015-02-04  Henrik Bengtsson  <hb@biostat.ucsf.edu>

	* R/init.R (.onAttach): Warn on non-existing key
	* README.md: Typo fixes, added note that channels are public

2015-01-20  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R: Some improvements to logic and use of test variables

2015-01-19  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R: Support option testemail and testchannel

	* DESCRIPTION: Bump Version: and Date:

2015-01-18  Mike Birdgeneau  <mike.birdgeneau@gmail.com>

	* R/pushes.R (pbPost): Support for channels

	* tests/simpleTests.R: Added tests for channels

2014-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* tests/simpleTests.R: A few minor edits

2014-12-29  Mike Birdgeneau  <mike.birdgeneau@gmail.com>

	* R/pushes.R: Corrections to file transfer mode

	* tests/simpleTests.R: Added more tests

2014-11-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.1

	* DESCRIPTION: Updated the text in Description:

2014-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R: Correct file upload method

	* R/init.R: Protect filename by spaces

2014-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0

2014-10-09  Dirk Eddelbuettel  <edd@debian.org>

	* man/rpushbullet-package.Rd: Added a new section on intialization
	detailing how api key, device key(s) and name(s) and defaultdevice
	can be specified via a dotfile, options or function arguments.

	* R/pushes.R: Minor correction

2014-10-08  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R: New (optional) argument 'email' in pbPost
	* man/pbPost.Rd: Corresponding manual page updates

2014-10-06  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R: Minor typo correction by Mike Birdgeneau

	* R/pushes.R: Made file operations silent, minor tweak to docs
	* R/init.R: Made file operations silent

	* R/init.R: Also set 'names' option from init file

	* tests/simpleTests.R: Added two examples for type='link'
	and type='file'

2014-09-10  Dirk Eddelbuettel  <edd@debian.org>