@@ -43,13 +43,14 @@ device(s) in the list of devices.}
 
 \item{apikey}{The API key used to access the service. It can be
 supplied as an argument here, via the global option
-\code{rpushbullet.key}, or via the file \code{~/.rpushbullet.json}
+\code{rpushbullet.key}, or via the local file \code{./.rpushbullet.json},
+or if that does not exist the global file \code{~/.rpushbullet.json},
 which is read at package initialization (and, if found, also sets
 the global option).}
 
 \item{devices}{The device to which this post is pushed. It can be
 supplied as an argument here, or via the file
-\code{~/.rpushbullet.json} which is read at package
+\code{.rpushbullet.json} which is read at package
 initialization.}
 
 \item{verbose}{Boolean switch to add additional output}
