@@ -1,5 +1,7 @@
 2015-02-04  Henrik Bengtsson  <hb@biostat.ucsf.edu>
 
+	* R/init.R (.onAttach): Now using ./.rpushbullet.json, otherwise
+	~/.rpushbullet.json.
 	* R/init.R (.onAttach): Warn on non-existing key
 	* README.md: Typo fixes, added note that channels are public
 
